--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "mdbreact": "^5.1.0",
     "next": "10.2.3",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
+    "semantic-ui-react": "^2.0.4",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "video.js": "^7.15.4"
